@@ -26,6 +26,7 @@ import org.springframework.security.web.authentication.session.RegisterSessionAu
 import org.springframework.security.web.authentication.session.SessionAuthenticationStrategy;
 import org.springframework.session.FindByIndexNameSessionRepository;
 import org.springframework.session.Session;
+import org.springframework.session.data.redis.RedisIndexedSessionRepository;
 import org.springframework.session.data.redis.RedisOperationsSessionRepository;
 import org.springframework.session.data.redis.config.annotation.web.http.EnableRedisHttpSession;
 import org.springframework.session.security.SpringSessionBackedSessionRegistry;
@@ -49,6 +50,7 @@ import static org.springframework.web.util.TagUtils.SCOPE_REQUEST;
 @Profile("!test")
 @EnableRedisHttpSession
 @EnableScheduling
+@SuppressWarnings("unchecked")
 public class SecurityConfig extends KeycloakWebSecurityConfigurerAdapter {
 
 
@@ -63,21 +65,16 @@ public class SecurityConfig extends KeycloakWebSecurityConfigurerAdapter {
             "/webjars/**"
     };
 
-    static final List<String> NO_AUTH_URLS = Collections.unmodifiableList(
-            Arrays.asList(ArrayUtils.addAll(SWAGGER_WHITELIST, ENGINE, ACTUATOR_HEALTH, ACTUATOR_METRICS, WEB_SOCKET_TASKS))
-    );
+    static final List<String> NO_AUTH_URLS = List.of(ArrayUtils.addAll(SWAGGER_WHITELIST, ENGINE, ACTUATOR_HEALTH, ACTUATOR_METRICS, WEB_SOCKET_TASKS));
 
     public final KeycloakClientRequestFactory keycloakClientRequestFactory;
 
     public final RedisConnectionFactory redisConnectionFactory;
 
-    public final FindByIndexNameSessionRepository sessionRepository;
 
-    public SecurityConfig(KeycloakClientRequestFactory keycloakClientRequestFactory, RedisConnectionFactory redisConnectionFactory,
-                          FindByIndexNameSessionRepository sessionRepository) {
+    public SecurityConfig(KeycloakClientRequestFactory keycloakClientRequestFactory, RedisConnectionFactory redisConnectionFactory) {
         this.keycloakClientRequestFactory = keycloakClientRequestFactory;
         this.redisConnectionFactory = redisConnectionFactory;
-        this.sessionRepository = sessionRepository;
     }
 
     @Bean
@@ -124,9 +121,14 @@ public class SecurityConfig extends KeycloakWebSecurityConfigurerAdapter {
     @Bean
     @SuppressWarnings("unchecked")
     public SessionRegistry springSessionBackedRegistry() {
-        return new SpringSessionBackedSessionRegistry<Session>(sessionRepository);
+        return new SpringSessionBackedSessionRegistry<Session>(sessionRepository());
     }
 
+    @Bean
+    @SuppressWarnings("unchecked")
+    public FindByIndexNameSessionRepository sessionRepository() {
+        return new RedisIndexedSessionRepository((RedisTemplate) redisTemplate());
+    }
 
     @Override
     protected void configure(HttpSecurity http) throws Exception {
